salesforce/force-app/main/default/objects/Account/fields/AI_Prospect_Data_Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Prospect_Data_Confidence_Score__c</fullName>
    <description>Data hygiene and evidence confidence score for the Account value model.</description>
    <inlineHelpText>Data hygiene and evidence confidence score for the Account value model.</inlineHelpText>
    <label>AI Prospect Data Confidence Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>