salesforce/force-app/main/default/objects/Account/fields/AI_Prospect_Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Prospect_Fit_Score__c</fullName>
    <description>Fit/value score derived from website and Salesforce capacity evidence.</description>
    <inlineHelpText>Fit/value score derived from website and Salesforce capacity evidence.</inlineHelpText>
    <label>AI Prospect Fit Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>