salesforce/force-app/main/default/objects/Account/fields/AI_Prospect_Timing_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Prospect_Timing_Score__c</fullName>
    <description>Optional timing or engagement score. Leave blank until timing inputs are validated.</description>
    <inlineHelpText>Optional timing or engagement score. Leave blank until timing inputs are validated.</inlineHelpText>
    <label>AI Prospect Timing Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>