salesforce/force-app/main/default/objects/Account/fields/AI_Prospect_Value_Action__c.field-meta.xml
<CustomField>
    <fullName>AI_Prospect_Value_Action__c</fullName>
    <description>Recommended action from the Account value scoring pipeline.</description>
    <inlineHelpText>Recommended action from the Account value scoring pipeline.</inlineHelpText>
    <label>AI Prospect Value Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>score_now</fullName><default>false</default><label>Score Now</label></value>
            <value><fullName>non_icp_confirmed</fullName><default>false</default><label>Non ICP Confirmed</label></value>
            <value><fullName>url_enrichment_needed</fullName><default>false</default><label>URL Enrichment Needed</label></value>
            <value><fullName>search_fallback_needed</fullName><default>false</default><label>Search Fallback Needed</label></value>
            <value><fullName>manual_parent_child_review</fullName><default>false</default><label>Manual Parent/Child Review</label></value>
            <value><fullName>enterprise_sales_review</fullName><default>false</default><label>Enterprise Sales Review</label></value>
            <value><fullName>duplicate_review</fullName><default>false</default><label>Duplicate Review</label></value>
            <value><fullName>insufficient_public_evidence</fullName><default>false</default><label>Insufficient Public Evidence</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>