salesforce/force-app/main/default/objects/Account/fields/AI_Prospect_Value_ARR_Point__c.field-meta.xml
<CustomField>
    <fullName>AI_Prospect_Value_ARR_Point__c</fullName>
    <description>Pipeline Potential ARR ceiling from the Account value scoring model; directional for prioritization, not booked or forecast ARR.</description>
    <inlineHelpText>Pipeline Potential ARR ceiling; directional. Use with MCV, fit, confidence, and evidence for prioritization. Not booked or forecast ARR.</inlineHelpText>
    <label>AI Prospect Pipeline Potential ARR Point</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>