salesforce/force-app/main/default/objects/Account/fields/AI_Prospect_Value_ARR_Range__c.field-meta.xml
<CustomField>
    <fullName>AI_Prospect_Value_ARR_Range__c</fullName>
    <description>Pipeline Potential ARR range from the Account value scoring model; directional for prioritization, not booked or forecast ARR.</description>
    <inlineHelpText>Pipeline Potential ARR range; directional. Use with MCV, fit, confidence, and evidence for prioritization. Not booked or forecast ARR.</inlineHelpText>
    <label>AI Prospect Pipeline Potential ARR Range</label>
    <length>50</length>
    <type>Text</type>
</CustomField>