salesforce/force-app/main/default/objects/Account/fields/AI_Prospect_Value_Canonical_URL__c.field-meta.xml
<CustomField>
    <fullName>AI_Prospect_Value_Canonical_URL__c</fullName>
    <description>Canonical or final URL used for Account value scoring.</description>
    <inlineHelpText>Canonical or final URL used for Account value scoring.</inlineHelpText>
    <label>AI Prospect Value Canonical URL</label>
    <type>Url</type>
</CustomField>