salesforce/force-app/main/default/objects/Account/fields/AI_Prospect_Value_Components__c.field-meta.xml
<CustomField>
    <fullName>AI_Prospect_Value_Components__c</fullName>
    <description>Structured JSON score components, raw disposition, and model diagnostics from the Account value scoring model.</description>
    <inlineHelpText>Structured JSON score components, raw disposition, and model diagnostics from the Account value scoring model.</inlineHelpText>
    <label>AI Prospect Value Components</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>