salesforce/force-app/main/default/objects/Account/fields/AI_Prospect_Value_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Prospect_Value_Confidence__c</fullName>
    <description>Confidence bucket for the Account value scoring output.</description>
    <inlineHelpText>Confidence bucket for the Account value scoring output.</inlineHelpText>
    <label>AI Prospect Value Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
            <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
            <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>