salesforce/force-app/main/default/objects/Account/fields/AI_Prospect_Value_Evidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Prospect_Value_Evidence__c</fullName>
    <description>Human-readable evidence and rationale from the Account value scoring model.</description>
    <inlineHelpText>Human-readable evidence and rationale from the Account value scoring model.</inlineHelpText>
    <label>AI Prospect Value Evidence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>