salesforce/force-app/main/default/objects/Account/fields/AI_Prospect_Value_ICP__c.field-meta.xml
<CustomField>
    <fullName>AI_Prospect_Value_ICP__c</fullName>
    <description>Normalized ICP and scorability disposition from the Account value model.</description>
    <inlineHelpText>Normalized ICP and scorability disposition from the Account value model.</inlineHelpText>
    <label>AI Prospect Value ICP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>scorable</fullName><default>false</default><label>Scorable</label></value>
            <value><fullName>non_icp</fullName><default>false</default><label>Non ICP</label></value>
            <value><fullName>enterprise</fullName><default>false</default><label>Enterprise</label></value>
            <value><fullName>hygiene_needed</fullName><default>false</default><label>Hygiene Needed</label></value>
            <value><fullName>parent_child_review</fullName><default>false</default><label>Parent/Child Review</label></value>
            <value><fullName>duplicate_review</fullName><default>false</default><label>Duplicate Review</label></value>
            <value><fullName>insufficient_public_evidence</fullName><default>false</default><label>Insufficient Public Evidence</label></value>
            <value><fullName>unknown</fullName><default>false</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>