salesforce/force-app/main/default/objects/Account/fields/AI_Prospect_Value_MCV_High__c.field-meta.xml
<CustomField>
    <fullName>AI_Prospect_Value_MCV_High__c</fullName>
    <description>Upper bound of predicted monthly closing volume from the Account value scoring model.</description>
    <inlineHelpText>Upper bound of predicted monthly closing volume from the Account value scoring model.</inlineHelpText>
    <label>AI Prospect Value MCV High</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>