salesforce/force-app/main/default/objects/Account/fields/AI_Prospect_Value_MCV_Low__c.field-meta.xml
<CustomField>
    <fullName>AI_Prospect_Value_MCV_Low__c</fullName>
    <description>Lower bound of predicted monthly closing volume from the Account value scoring model.</description>
    <inlineHelpText>Lower bound of predicted monthly closing volume from the Account value scoring model.</inlineHelpText>
    <label>AI Prospect Value MCV Low</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>