salesforce/force-app/main/default/objects/Account/fields/AI_Prospect_Value_MCV_Point__c.field-meta.xml
<CustomField>
    <fullName>AI_Prospect_Value_MCV_Point__c</fullName>
    <description>Predicted monthly closing volume point estimate from the Account value scoring model.</description>
    <inlineHelpText>Predicted monthly closing volume point estimate from the Account value scoring model.</inlineHelpText>
    <label>AI Prospect Value MCV Point</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>