salesforce/force-app/main/default/objects/Account/fields/AI_Prospect_Value_Model_Version__c.field-meta.xml
<CustomField>
    <fullName>AI_Prospect_Value_Model_Version__c</fullName>
    <description>Version of the Account value scoring model used for the latest score.</description>
    <inlineHelpText>Version of the Account value scoring model used for the latest score.</inlineHelpText>
    <label>AI Prospect Value Model Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>