salesforce/force-app/main/default/objects/Account/fields/AI_Prospect_Value_Rank__c.field-meta.xml
<CustomField>
    <fullName>AI_Prospect_Value_Rank__c</fullName>
    <description>Global prospect rank within the model version and run id.</description>
    <inlineHelpText>Global prospect rank within the model version and run id. Do not compare ranks across model versions without the run id.</inlineHelpText>
    <label>AI Prospect Value Rank</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>