salesforce/force-app/main/default/objects/Account/fields/AI_Prospect_Value_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>AI_Prospect_Value_Run_Id__c</fullName>
    <description>Stable run identifier for Account value scoring audit and rollback.</description>
    <inlineHelpText>Stable run identifier for Account value scoring audit and rollback.</inlineHelpText>
    <label>AI Prospect Value Run Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>