salesforce/force-app/main/default/objects/Account/fields/AI_Prospect_Value_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Prospect_Value_Score__c</fullName>
    <description>Total S1-S10 prospect value score from the Account value scoring model.</description>
    <inlineHelpText>Total S1-S10 prospect value score from the Account value scoring model.</inlineHelpText>
    <label>AI Prospect Value Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>