salesforce/force-app/main/default/objects/Account/fields/AI_Prospect_Value_Source__c.field-meta.xml
<CustomField>
    <fullName>AI_Prospect_Value_Source__c</fullName>
    <description>Source artifact or process that produced the latest Account value score.</description>
    <inlineHelpText>Source artifact or process that produced the latest Account value score.</inlineHelpText>
    <label>AI Prospect Value Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>