salesforce/force-app/main/default/objects/Account/fields/AI_Prospect_Value_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>AI_Prospect_Value_Updated_At__c</fullName>
    <description>Timestamp when the Account value score was last produced or written.</description>
    <inlineHelpText>Timestamp when the Account value score was last produced or written.</inlineHelpText>
    <label>AI Prospect Value Updated At</label>
    <type>DateTime</type>
</CustomField>