salesforce/force-app/main/default/objects/Account/fields/Legacy_Prospect_Value_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Prospect_Value_Date__c</fullName>
    <description>Date parsed from the legacy Dust prospect value note.</description>
    <inlineHelpText>Date parsed from the legacy Dust prospect value note.</inlineHelpText>
    <label>Legacy Prospect Value Date</label>
    <type>Date</type>
</CustomField>