salesforce/force-app/main/default/objects/Account/fields/Legacy_Prospect_Value_Notes__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Prospect_Value_Notes__c</fullName>
    <description>Full legacy Dust prospect value note snapshot used for side-by-side model comparison.</description>
    <inlineHelpText>Full legacy Dust prospect value note snapshot used for side-by-side model comparison.</inlineHelpText>
    <label>Legacy Prospect Value Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>