salesforce/force-app/main/default/objects/Account/fields/Legacy_Prospect_Value_Score__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Prospect_Value_Score__c</fullName>
    <description>Ordinal numeric score derived from the legacy Dust prospect value tier for side-by-side reporting.</description>
    <inlineHelpText>Ordinal numeric score derived from the legacy Dust prospect value tier for side-by-side reporting.</inlineHelpText>
    <label>Legacy Prospect Value Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>