salesforce/force-app/main/default/objects/Account/fields/Legacy_Prospect_Value_Source__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Prospect_Value_Source__c</fullName>
    <description>Source of the legacy prospect value tier snapshot.</description>
    <inlineHelpText>Source of the legacy prospect value tier snapshot.</inlineHelpText>
    <label>Legacy Prospect Value Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>