salesforce/force-app/main/default/objects/Account/fields/Legacy_Prospect_Value_Tier__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Prospect_Value_Tier__c</fullName>
    <description>Structured snapshot of the legacy Dust prospect value tier parsed from Account prospecting notes.</description>
    <inlineHelpText>Structured snapshot of the legacy Dust prospect value tier parsed from Account prospecting notes.</inlineHelpText>
    <label>Legacy Prospect Value Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>A+</fullName><default>false</default><label>A+</label></value>
            <value><fullName>A</fullName><default>false</default><label>A</label></value>
            <value><fullName>A-</fullName><default>false</default><label>A-</label></value>
            <value><fullName>B+</fullName><default>false</default><label>B+</label></value>
            <value><fullName>B</fullName><default>false</default><label>B</label></value>
            <value><fullName>B-</fullName><default>false</default><label>B-</label></value>
            <value><fullName>C</fullName><default>false</default><label>C</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>