salesforce/force-app/main/default/objects/Account/listViews/Account_Scoring.listView-meta.xml
<ListView>
    <fullName>Account_Scoring</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Account_Segment_v2__c</columns>
    <columns>AI_Prospect_Value_MCV_Point__c</columns>
    <columns>AI_Prospect_Value_ARR_Point__c</columns>
    <columns>AI_Prospect_Value_Confidence__c</columns>
    <columns>AI_Prospect_Value_Rank__c</columns>
    <columns>AI_Prospect_Value_Action__c</columns>
    <columns>AI_Prospect_Value_ICP__c</columns>
    <columns>AI_Prospect_Value_Updated_At__c</columns>
    <filterScope>Mine</filterScope>
    <label>Account Scoring</label>
</ListView>